# yew-template

./: Cargo.toml  README.md  Trunk.toml  index.html  index.scss
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/counter/: Counter.scss  mod.rs
src/components/footer/: Footer.scss  mod.rs
src/components/header/: Header.scss  mod.rs
src/components/main/: Main.scss  mod.rs
