[package]
name = "yew-template"
version = "1.0.1"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
grass = { version = "0.12.4", features = ["macro"] }
stylist = { version = "0.12.1", features = ["yew", "parser"] }
yew = { version = "0.20.0", features = ["csr"] }